# pymicroscopysoftwareautomation

./: README.md  pyproject.toml
.github/workflows/: mypy.yml
examples/: testfusion.py
microscopesoftwareautomation/: __init__.py  classes.py
notebooks/: Test_Andor_Fusion_Software.ipynb
src/microscopesoftwareautomation/: __init__.py  andorfusion.py
