[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microscopesoftwareautomation"
version = "0.0.1"
description = "Automate Microscopy Software"
readme = "README.md"
authors = [{ name = "Rolf Harkes", email = "r.harkes@nki.nl" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Andor", "Fusion"]
dependencies = [
    "requests",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["black", "bumpver", "pytest", "mypy", "types-requests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.mypy]
python_version = '3.11'
mypy_path = "src"
packages = "microscopesoftwareautomation"
strict = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311']

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/microscopesoftwareautomation/version.py" = [
    "{version}"
]